--- a/micro2/registration/index.html
+++ b/micro2/registration/index.html
@@ -51,7 +51,11 @@
 </form> 
 
 <script type="text/javascript">
-<!--
+var person = {
+	email: "name@mail.com"
+	};
+	
+	
 function validateEmail() {
     var emailText = document.getElementById('email').value;
     var pattern = /^[a-zA-Z0-9\-_]+(\.[a-zA-Z0-9\-_]+)*@[a-z0-9]+(\-[a-z0-9]+)*(\.[a-z0-9]+(\-[a-z0-9]+)*)*\.[a-z]{2,4}$/;
