--- a/micro2/username/index.html
+++ b/micro2/username/index.html
@@ -60,7 +60,11 @@
 </form> 
 	
 <script type="text/javascript">
-
+var person = {
+	username: "name",
+	password: "password"
+};
+	
 function validateForm() {
     var unsername = document.getElementById('username').value;
     var password = document.getElementById('password').value;
