--- a/micro2/username/index.html
+++ b/micro2/username/index.html
@@ -105,6 +105,7 @@ function inputMatch() {
 
 window.onload = function() {
     document.getElementById('form_val').onsubmit = validateForm;
+    document.getElementById('form_val').onsubmit = inputMatch;	
 }
 </script>	
 
