--- a/micro2/registration/index.html
+++ b/micro2/registration/index.html
@@ -41,6 +41,7 @@
   </nav>
 <div class="container-fluid">
 <h1>Registration Page</h1>
+<div id="alerts"></div>	
 
 <form id="email_form">
   <div class="form-group">
@@ -60,6 +61,10 @@ function validateEmail() {
     var emailText = document.getElementById('email').value;
     var pattern = /^[a-zA-Z0-9\-_]+(\.[a-zA-Z0-9\-_]+)*@[a-z0-9]+(\-[a-z0-9]+)*(\.[a-z0-9]+(\-[a-z0-9]+)*)*\.[a-z]{2,4}$/;
     if (pattern.test(emailText)) {
+	    if(emailText != person.email) {
+	    	document.getElementById('alerts').innerHTML = '<div class='alert alert-danger'><strong>Warning!  </strong>This email does not match our records.</div>';
+	    }
+	    
         return true;
     } else {
         alert('Bad email address: ' + emailText);
