--- a/micro2/registration/index.html
+++ b/micro2/registration/index.html
@@ -68,7 +68,7 @@ function validateEmail() {
 	    
         return true;
     } else {
-        alert('Bad email address: ' + emailText);
+        alert('Incorrect e-mail format: ' + emailText);
         return false;
     }
 }
