--- a/micro3/index.html
+++ b/micro3/index.html
@@ -26,7 +26,7 @@
       </div>
 
       <div class="nav navbar-nav navbar-collapse collapse" id="headlinks">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav" id="navlist">
           <li class="active"><a href="./">Home</a></li>
           <li><a href="./about">About</a></li>
           <li><a href="./contact">Contact</a></li>
