--- a/micro2/contact/index.html
+++ b/micro2/contact/index.html
@@ -8,6 +8,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>CIS 311 Project</title>
+
+  <script src="../nav.js"></script>
 </head>
 
 <body>
@@ -24,7 +26,7 @@
       </div>
 
       <div class="nav navbar-nav navbar-collapse collapse" id="headlinks">
-        <ul class="nav navbar-nav">
+        <ul class="nav navbar-nav" id="navlist">
           <li ><a href="../">Home</a></li>
           <li><a href="../about">About</a></li>
           <li class="active"><a href="../contact">Contact</a></li>
