--- a/micro3/index.html
+++ b/micro3/index.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   <title>CIS 311 Project</title>
 
-  <script src="/nav.js"></script>
+  <script src="./nav.js"></script>
 </head>
 
 <body>
